--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currency Checker</title>
+  <link rel="icon" href="favicon.png" />
+
   <link rel="stylesheet" href="flexboxgrid.min.css">
   <link rel="stylesheet" href="main.css">
 </head>
