fix another text - cú

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h4>Bitcoin(BTC)</h4>
           <div id="btc_value" class= row text-center">
             <div class="col-sm-2"><img class="middle no-border" src="pacman.svg" alt="loading..."></div>
-            <div class="col-sm-10 no-margin no-padding">Getting the value with Elon Musk...</div>
+            <div class="col-sm-10 no-margin no-padding">Retrieving data from Véio da Havan...</div>
           </div>
         </div>
       </div>
@@ -30,7 +30,7 @@
         <div>
           <h4>Ethereum(ETH)</h4>
           <div id="eth_value" class="card-text row text-center">
-            <div class="col-sm-10 no-margin no-padding">Getting the value with Jeff Bezos...</div>
+            <div class="col-sm-10 no-margin no-padding">Retrieving data from Véio da Havan...</div>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
         <div>
           <h4>Ripple(XRP)</h4>
           <div id="xrp_value" class="card-text row text-center">
-            <div class="col-sm-10 no-margin no-padding">Getting the value with Véio da Havan...</div>
+            <div class="col-sm-10 no-margin no-padding">Retrieving data from Véio da Havan...</div>
           </div>
         </div>
       </div>
