add 15 seconds timer

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 text-center">
       <div>
-        <img id="btc_image" src="spinner.svg" alt="loading...">
+        <img id="btc_image" src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579" alt="loading...">
         <div>
           <h4>Bitcoin(BTC)</h4>
           <div id="btc_value" class= row text-center">
-            <div class="col-sm-2"><img class="middle no-border" src="pacman.svg" alt="loading..."></div>
             <div class="col-sm-10 no-margin no-padding">Retrieving data from Véio da Havan...</div>
           </div>
         </div>
@@ -26,7 +25,7 @@
     </div>
     <div class="col-xs-12 col-sm-4 text-center">
       <div>
-        <img id="eth_image" src="spinner.svg" alt="Card example image">
+        <img id="eth_image" src="https://assets.coingecko.com/coins/images/279/large/ethereum.png?1595348880" alt="Card example image">
         <div>
           <h4>Ethereum(ETH)</h4>
           <div id="eth_value" class="card-text row text-center">
@@ -37,7 +36,7 @@
     </div>
     <div class="col-xs-12 col-sm-4 text-center">
       <div>
-        <img id="xrp_image" src="spinner.svg" alt="Card example image">
+        <img id="xrp_image" src="https://assets.coingecko.com/coins/images/44/large/xrp-symbol-white-128.png?1605778731" alt="Card example image">
         <div>
           <h4>Ripple(XRP)</h4>
           <div id="xrp_value" class="card-text row text-center">
