centralizing data in mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="btc_image" src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579" alt="loading...">
         <div>
           <h4>Bitcoin(BTC)</h4>
-          <div id="btc_value" class= row text-center">
+          <div id="btc_value" class="card-text row text-center">
             <div class="col-sm-10 no-margin no-padding">Retrieving data from Véio da Havan...</div>
           </div>
         </div>
