add interval to change title

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currency Checker</title>
+  <title>Coinberpunk !</title>
   <link rel="icon" href="favicon.png" />
 
   <link rel="stylesheet" href="flexboxgrid.min.css">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <span id="title_here" class="hidden"></span>
   <h1>Coinberpunk 69-420</h1>
   <h6>Powered by <a target="_blank" href="https://www.coingecko.com">CoinGecko API</a></h6>
   <div class="row">
