add start github

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <span id="title_here" class="hidden"></span>
-  <h1>Coinberpunk 69-420</h1>
-  <h6>Powered by <a target="_blank" href="https://www.coingecko.com">CoinGecko API</a></h6>
+  <h2>Coinberpunk (Update every 15s)</h2>
+  <h5>Powered by <a target="_blank" href="https://www.coingecko.com">CoinGecko API</a> </h5>
   <div class="row">
     <div class="col-xs-12 col-sm-4 text-center">
       <div>
@@ -51,10 +51,10 @@
   <br>
   <div class="row">
     <div class="col-sm-12 text-center">
-      <button onclick="main();" class="cybr-btn">
-        Update<span aria-hidden>_</span>
-        <span aria-hidden class="cybr-btn__glitch">Update_</span>
-        <span aria-hidden class="cybr-btn__tag">coin</span>
+      <button onclick="openGithub();" class="cybr-btn">
+        Star in Github<span aria-hidden>_</span>
+        <span aria-hidden class="cybr-btn__glitch">Pleaaase_</span>
+        <span aria-hidden class="cybr-btn__tag">star</span>
       </button>
     </div>
   </div>
