--- a/index.html
+++ b/index.html
@@ -8,8 +8,33 @@
 
   <link rel="stylesheet" href="flexboxgrid.min.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="https://unpkg.com/augmented-ui@2/augmented-ui.min.css">
 </head>
 <body>
+  <div class="menu-overlay"></div>
+<a href="#" class="menu-open">Open Menu</a>
+
+<div class="side-menu-wrapper">
+  <div class="side-menu-child" data-augmented-ui="border tl-2-clip-x l-clip-y bl-2-clip-x">
+    <a href="#" class="menu-close">×</a>
+    <ul>
+      <li><a href="http://www.google.com" target="_blank" rel="nofollow">Google Search</a></li>
+      <li><a href="http://www.yahoo.com" target="_blank" rel="nofollow">Yahoo Search</a></li>
+      <li><a href="http://www.facebook.com" target="_blank" rel="nofollow">Facebook</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
+    </ul>
+  </div>
+</div>
   <span id="title_here" class="hidden"></span>
   <h2>Coinberpunk (Update every 15s | <span id="current_gmt"></span></span>)</h2>
   <h5>Powered by <a target="_blank" href="https://www.coingecko.com">CoinGecko API</a> </h5>
