add buy me a coffee link

--- a/index.html
+++ b/index.html
@@ -86,11 +86,18 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-sm-12 text-center">
-      <button onclick="openGithub();" class="cybr-btn">
+    <div class="col-sm-6 text-center">
+      <button onclick="openUrl('https://www.github.com/bevilaquabruno/coinberpunk');" class="cybr-btn">
         Star in Github<span aria-hidden>_</span>
-        <span aria-hidden class="cybr-btn__glitch">Pleaaase_</span>
-        <span aria-hidden class="cybr-btn__tag">star</span>
+        <span aria-hidden class="cybr-btn__glitch">Star in github_</span>
+        <span aria-hidden class="cybr-btn__tag">Star</span>
+      </button>
+    </div>
+    <div class="col-sm-6 text-center">
+      <button onclick="openUrl('https://www.buymeacoffee.com/bevilaqua');" class="cybr-btn">
+        Buy me a coffee<span aria-hidden>_</span>
+        <span aria-hidden class="cybr-btn__glitch">Please_</span>
+        <span aria-hidden class="cybr-btn__tag">Buy♥</span>
       </button>
     </div>
   </div>
