--- a/index.html
+++ b/index.html
@@ -4,44 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coinberpunk !</title>
-  <link rel="icon" href="favicon.png" />
+  <link rel="icon" href="public/img/favicon.png" />
 
-  <link rel="stylesheet" href="flexboxgrid.min.css">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="https://unpkg.com/augmented-ui@2/augmented-ui.min.css">
+  <link rel="stylesheet" href="public/css/flexboxgrid.min.css">
+  <link rel="stylesheet" href="public/css/main.css">
+  <!-- <link rel="stylesheet" href="public/css/menu.css"> -->
+  <!-- <link rel="stylesheet" href="public/css/augmented-ui.min.css"> -->
 </head>
 <body>
-  <div class="menu-overlay"></div>
-<a href="#" class="menu-open">Open Menu</a>
-
-<div class="side-menu-wrapper">
-  <div class="side-menu-child" data-augmented-ui="border tl-2-clip-x l-clip-y bl-2-clip-x">
-    <a href="#" class="menu-close">×</a>
-    <ul>
-      <li><a href="http://www.google.com" target="_blank" rel="nofollow">Google Search</a></li>
-      <li><a href="http://www.yahoo.com" target="_blank" rel="nofollow">Yahoo Search</a></li>
-      <li><a href="http://www.facebook.com" target="_blank" rel="nofollow">Facebook</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-      <li><a href="http://www.flickr.com" target="_blank" rel="nofollow">Flickr</a></li>
-    </ul>
-  </div>
-</div>
+  <!-- <div class="menu-overlay"></div>
+  <a href="#" class="menu-open">Open Menu</a>
+  <div class="side-menu-wrapper">
+    <div class="side-menu-child" data-augmented-ui="border tl-2-clip-x l-clip-y bl-2-clip-x">
+      <a href="#" class="menu-close">×</a>
+      <ul class="no-select">
+        <li>Click to show/hide the coin.</li>
+        <li><div><img class="img-menu" src="public/img/bitcoin.png" alt="Bitcoin"> Bitcoin</div></li>
+        <li><div><img class="img-menu" src="public/img/ethereum.png" alt="Ethereum"> Ethereum</div></li>
+        <li><div><img class="img-menu" src="public/img/ripple.png" alt="Ripple"> Ripple</div></li>
+        <li><div><img class="img-menu" src="public/img/dogecoin.png" alt="Dogecoin"> DogeCoin</div></li>
+        <li><div><img class="img-menu" src="public/img/cardano.svg" alt="Cardano"> Cardano</div></li>
+      </ul>
+    </div>
+  </div> -->
   <span id="title_here" class="hidden"></span>
   <h2>Coinberpunk (Update every 15s | <span id="current_gmt"></span></span>)</h2>
   <h5>Powered by <a target="_blank" href="https://www.coingecko.com">CoinGecko API</a> </h5>
   <div class="row">
     <div class="col-xs-12 col-sm-3 text-center">
       <div>
-        <img id="btc_image" src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579" alt="Bitcoin">
+        <img id="btc_image" src="public/img/bitcoin.png" alt="Bitcoin">
         <div>
           <h4>Bitcoin(BTC)</h4>
           <div id="btc_value" class="card-text row text-center">
@@ -52,7 +44,7 @@
     </div>
     <div class="col-xs-12 col-sm-3 text-center">
       <div>
-        <img id="eth_image" src="https://assets.coingecko.com/coins/images/279/large/ethereum.png?1595348880" alt="Ethereum">
+        <img id="eth_image" src="public/img/ethereum.png" alt="Ethereum">
         <div>
           <h4>Ethereum(ETH)</h4>
           <div id="eth_value" class="card-text row text-center">
@@ -63,7 +55,18 @@
     </div>
     <div class="col-xs-12 col-sm-3 text-center">
       <div>
-        <img id="xrp_image" src="https://assets.coingecko.com/coins/images/44/large/xrp-symbol-white-128.png?1605778731" alt="Ripple">
+        <img id="ada_image" src="public/img/cardano.svg" alt="Cardano">
+        <div>
+          <h4>Cardano(ADA)</h4>
+          <div id="ada_value" class="card-text row text-center">
+            <div class="col-sm-10 no-margin no-padding">Retrieving data from Véio da Havan...</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="col-xs-12 col-sm-2 text-center">
+      <div>
+        <img id="xrp_image" src="public/img/ripple.png" alt="Ripple">
         <div>
           <h4>Ripple(XRP)</h4>
           <div id="xrp_value" class="card-text row text-center">
@@ -71,10 +74,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="col-xs-12 col-sm-3 text-center">
       <div>
-        <img id="doge_image" src="https://dogecoin.com/imgs/dogecoin-300.png" alt="Dogecoin">
+        <img id="doge_image" src="public/img/dogecoin.png" alt="Dogecoin">
         <div>
           <h4>Dogecoin(DOGE)</h4>
           <div id="doge_value" class="card-text row text-center">
@@ -86,22 +89,22 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-sm-6 text-center">
+    <div class="col-sm-6 col-xs-12 text-center">
       <button onclick="openUrl('https://www.github.com/bevilaquabruno/coinberpunk');" class="cybr-btn">
         Star in Github<span aria-hidden>_</span>
         <span aria-hidden class="cybr-btn__glitch">Star in github_</span>
         <span aria-hidden class="cybr-btn__tag">Star</span>
       </button>
-    </div>
-    <div class="col-sm-6 text-center">
+    </div>&nbsp;&nbsp;&nbsp;
+    <!-- <div class="col-sm-6 col-xs-12 text-center">
       <button onclick="openUrl('https://www.buymeacoffee.com/bevilaqua');" class="cybr-btn">
         Buy me a coffee<span aria-hidden>_</span>
         <span aria-hidden class="cybr-btn__glitch">Please_</span>
         <span aria-hidden class="cybr-btn__tag">Buy♥</span>
       </button>
-    </div>
+    </div> -->
   </div>
-  <script defer src="axios.min.js"></script>
-  <script defer src="main.js"></script>
+  <script defer src="public/javascript/axios.min.js"></script>
+  <script defer src="public/javascript/main.js"></script>
 </body>
 </html>
